--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<p>PhD student in Atmospheric Sciences</p>
 							<p>University of Washington</p>
 							<!--<p>New York City</p>-->
-							<span class="image avatar48"><img src="images/MtHood.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/profile.png" alt="" /></span>
 						</div>
 
 					<!-- Nav -->
@@ -92,7 +92,7 @@
                                                                         <div id="content">
 										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD studnet in Atmospheric Sciences at the University of Washington working with <a href="https://atmos.uw.edu/blog/beckya/becky-alexander/">Becky Alexander</a>. I study atmospheric chemistry and climate, and I'm currently focused on sulfate aerosols in the Arctic. Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>
 							
-										<p style="text-align: left;"><em>Overview:</em> I use ice cores and atmospheric chemistry modeling to understand past sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My Phd Research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities</p>
+										<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand past sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My Phd Research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities</p>
 	                                                                </div>
                                                                 </div>
                                                         </section>
@@ -128,7 +128,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 										<article class="item">
-										<a href="#" class="image fit"><img src="images/Fig3.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Fig3.jpg" alt="" /></a>
 										<header>
 										<h3>Modeling different volcanic sulfur emissions from passive degassing</h3>
 										</header>
@@ -288,9 +288,9 @@ http://doi.org/10.1098/rsta.2021.0258</a>. <a href="https://lettie-roach.github.
 
 
 <ul style="text-align: left;">
-  <li><i class="fas fa-briefcase"></i>  2019-present Graduate Student, Atmospheric Sciences, University of Washington, US</li>
-  <li><i class="fas fa-graduation-cap"></i> 2018-2019 Consultant, ICF Consulting, inc., Washington, DC</li>
-  <li><i class="fas fa-graduation-cap"></i> 2014-2018 Bachelor of Arts in Chemistry and Earth Sciences (high honors), Dartmouth College, NH</li>
+  <li><i class="fas fa-briefcase"></i>  2019-present   Graduate Student, Atmospheric Sciences, University of Washington, US</li>
+  <li><i class="fas fa-graduation-cap"></i> 2018-2019      Consultant, ICF Consulting, inc., Washington, DC</li>
+  <li><i class="fas fa-graduation-cap"></i> 2014-2018      Bachelor of Arts in Chemistry and Earth Sciences, Dartmouth College, NH</li>
 </ul>
 
 
