--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<p>PhD student in Atmospheric Sciences</p>
 							<p>University of Washington</p>
 							<!--<p>New York City</p>-->
-							<span class="image avatar48"><img src="images/profile.png" alt="" /></span>
+							<span class="image avatar48"><img src="images/profile_sq.png" alt="" /></span>
 						</div>
 
 					<!-- Nav -->
@@ -66,9 +66,9 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Ursula Jongebloed</h2>
-								<p>PhD student in Atmospheric Sciences</p>
-                                                                <p>-</p>
+							<!--<h2 class="alt">Ursula Jongebloed</h2>-->
+							<!--<p>PhD student in Atmospheric Sciences</p>-->
+							<!--<p>-</p>-->
 							</header>
 
 
@@ -90,7 +90,7 @@
                                                         <section class="col-6 col-12-narrower">
                                                                 <div class="container">
                                                                         <div id="content">
-										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD studnet in Atmospheric Sciences at the University of Washington working with <a href="https://atmos.uw.edu/blog/beckya/becky-alexander/">Becky Alexander</a>. I study atmospheric chemistry and climate, and I'm currently focused on sulfate aerosols in the Arctic. Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>
+										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD studnet in Atmospheric Sciences at the University of Washington working with <a href="https://atmos.uw.edu/blog/beckya/becky-alexander/">Becky Alexander</a>. I study atmospheric chemistry and climate in the Arctic. Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>
 							
 										<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand past sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My Phd Research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities</p>
 	                                                                </div>
@@ -128,9 +128,9 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 										<article class="item">
-										<a href="#" class="image fit"><img src="images/Fig3.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/MtHood.jpg" alt="" /></a>
 										<header>
-										<h3>Modeling different volcanic sulfur emissions from passive degassing</h3>
+										<h3>Fumarole on Mt. Hood in Oregon</h3>
 										</header>
 									</article>
 								</div>
@@ -146,16 +146,16 @@
                                                         <br></br>
 							<div class="row">
 								<div class="col-8 col-12-mobile">
-									<h1 style="text-align: left;"><b>Historical and future sea ice change</b></h1>
+									<h1 style="text-align: left;"><b>Marine phytoplankton sulfur emissions and chemistry</b></h1>
 									<p style="text-align: left;">Marine phytoplankton are primary producers in ocean ecosystems and influence climate through emissions of a sulfur compound called dimethyl sulfide (DMS) to the atmosphere. After emission, DMS is converted to two other sulfur compounds: methanesulfonic acid (MSA) and sulfate. MSA can be measured in ice cores and is used to study past DMS emissions from phytoplankton. However, human-caused changes to atmospheric chemistry affect how much DMS is converted to MSA vs. sulfate; thus, both compounds must be considered when studying past phytoplankton DMS emissions. In this work, we use sulfur isotopes to determine how much ice core sulfate comes from each source (DMS, volcanoes, human activities), allowing us to measure how much sulfate comes from phytoplankton and compare it to MSA. In general, we find that trends in DMS-derived sulfate do not align with trends in MSA, indicating that atmospheric chemistry must be considered when interpreting ice core records of MSA.</p>
 									<p style="text-align: left;">Related publications: Jongebloed et al. (2023), Industrial-era decline in Arctic methanesulfonic acid is offset by increased biogenic sulfate aerosol <em>in prep.</em>
 
 								</div>
 								<div class="col-4 col-12-mobile">
 										<article class="item">
-										<a href="#" class="image fit"><img src="images/Osman_fig.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/barents_sea.jpg" alt="" /></a>
 										<header>
-                                                                                <h3>Figure 2 from Osman et al. (2019) showing industrial-era decline in Greenland ice core MSA</h3>
+                                                                                <h3>Marine phytoplankton in the Barents Sea (NASA Earth Observatory)</h3>
 										</header>
 										</article>
 								
@@ -166,7 +166,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 										<article class="item">
-										<a href="#" class="image fit"><img src="images/summary.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/fairbanks_plume.jpg" alt="" /></a>
 										<header>
 										<h3>Anthropogenic sulfur dioxide emissions and ice core sulfate</h3>
 										</header>
