--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                                         <section class="col-6 col-12-narrower">
                                                                 <div class="container">
                                                                         <div id="content">
-										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD studnet in Atmospheric Sciences at the University of Washington working with <a href="https://atmos.uw.edu/blog/beckya/becky-alexander/">Becky Alexander</a>. I study atmospheric chemistry and climate in the Arctic. Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>
+										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD student in Atmospheric Sciences at the University of Washington working with <a href="https://atmos.uw.edu/blog/beckya/becky-alexander/">Becky Alexander</a>. I study atmospheric chemistry and climate in the Arctic. Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>
 							
 										<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand past sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My Phd Research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities</p>
 	                                                                </div>
@@ -174,7 +174,7 @@
 								</div>
 								<div class="col-8 col-12-mobile">
 									<h1 style="text-align: left;"><b>Anthropogenic and natural sulfate over industrial era</b></h1>
-									<p style="text-align: left;">OVer the industrial era (1850 to present day), anthropogenic activities have increased the abundance of sulfate aerosols to the atmosphere. These anthropogenic sulfate aerosols partially offset the warming caused by human greenhouse gases. However, the cooling caused by anthropogenic sulfate is difficult to estimate because the abundance of sulfate from natural sulfate (e.g. volcanoes, marine phytoplankton, and sea salt) is unknown. In this study, we use a Greenland ice core to investigate how much sulfate comes from anthropogenic activities versus natural sources over the industrial era</p>
+									<p style="text-align: left;">Over the industrial era (1850 to present day), anthropogenic activities have increased the abundance of sulfate aerosols to the atmosphere. These anthropogenic sulfate aerosols partially offset the warming caused by human greenhouse gases. However, the cooling caused by anthropogenic sulfate is difficult to estimate because the abundance of sulfate from natural sulfate (e.g. volcanoes, marine phytoplankton, and sea salt) is unknown. In this study, we use a Greenland ice core to investigate how much sulfate comes from anthropogenic activities versus natural sources over the industrial era</p>
 									<p style="text-align: left;">Related publications: Jongebloed et al. (in prep), Anthropogenic and natural sulfate in a Greenland ice core over the industrial era.</p>
 								</div>
 							</div>
