first pub update

--- a/index.html
+++ b/index.html
@@ -190,14 +190,16 @@
 							</header>
 
                                                         <p>Also see Google Scholar <a href="https://scholar.google.com/citations?user=flgAtJkAAAAJ&hl=en&oi=ao" class="ai ai-google-scholar ai-1x" style="font-size: 1.5em;"><span class="label"></span></a></p>
-                                                        <p style="text-align: left;"><b>[20]</b> Cooper V. T., <b>Roach L. A.</b>, Thomson J., Brenner S. D., Smith M. M., Meylan M. H. and Bitz C. M.. Wind waves in sea ice of the western Arctic and a global coupled wave-ice model (2022) <i>Phil. Trans. R. Soc. A.</i> 380:20210258. <a href="http://doi.org/10.1098/rsta.2021.0258">
-http://doi.org/10.1098/rsta.2021.0258</a>. <a href="https://lettie-roach.github.io/files/Cooper2022.pdf">[Download paper]</a></p>
+							<p style="text-align: left;"><b>[1]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Larrick, C. G., Wood, R., Fischer, T. P., Carn, S. A., Salimi, S., Edouard, S. R., Zhai, S., Geng, L., Alexander, B. (2022) Underestimated passive volcanic sulfur degassing implied overestimated aerosol forcing. <em>Geophysical Research Letters (In Review).</em> </p>
 
-                                                        <p style="text-align: left;"><b>[19]</b>  <b>Roach, L. A.</b>, Eisenman, I.,  Wagner, T. J., Blanchard-Wrigglesworth, E., and Bitz, C. M.. Asymmetry in the seasonal cycle of Antarctic sea ice due to insolation (2022). <i>Nature Geoscience</i>. <a href="https://doi.org/10.1038/s41561-022-00913-6">https://doi.org/10.1038/s41561-022-00913-6</a>. <a href="https://rdcu.be/cJ0OQ">[Download paper]</a>. <a href="https://lettie-roach.github.io/files/aasym_supp.pdf">[Download Supplementary]</a></p>
+							<p style="text-align: left;"><b>[2]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Hattori, S., Larrick, C. G., Salimi, S., Edouard, S. R., Geng, L., and Alexander, B. (<em>in prep</em>) Greenland ice core anthropogenic and natural sulfate over the industrial era.</p>
 
-                                                        <p style="text-align: left;"><b>[18]</b>  <b>Roach, L. A.</b> and Blanchard-Wrigglesworth, E.. Observed winds crucial for September Arctic sea ice loss (2022). <i>Geophysical Research Letters</i>, 49, e2022GL097884. <a href="https://doi.org/10.1029/2022GL097884">https://doi.org/10.1029/2022GL097884</a>. <a href="https://onlinelibrary.wiley.com/share/author/SJBS3UKJBS4TEKQT7DV3?target=10.1029/2022GL097884">[Download paper]</a></p> 
+							<p style="text-align: left;"><b>[3]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Larrick, C. G., Porter, W. C., Tashmim, L., Salimi, S., Edouard, S. R., Geng, L., and Alexander, B. (<em>in prep</em>).</p> 
 
-                                                       <p style="text-align: left;"><b>[17]</b> Montiel, F., Kohout, A. and <b>Roach, L. A.</b>. Physical drivers of wave attenuation in the marginal ice zone (2022). <i>Journal of Physical Oceanography</i>, 52(5), 889-906. <a href="https://doi.org/10.1175/JPO-D-21-0240.1">https://doi.org/10.1175/JPO-D-21-0240.1</a>. <a href="https://lettie-roach.github.io/files/JPO2022.pdf">[Download paper]</a></p>
+							<p style="text-align: left;"><b>[4]</b>  Banerjee, A., Riddell-Young, B. E., and <b>Jongebloed, U. A.</b> (2022). Ice-core records of atmospheric composition and chemistry. <em>Past Global Changes Magazine</em>, 104-105, 30(2),<a href="https://doi.org/10.22498/pages.30.2.104">https://doi.org/10.22498/pages.30.2.104</a> </p>
+							<header>
+								<h2>Presentations</h2>
+							</header>
 
                                                         <p style="text-align: left;"><b>[16]</b> Horvat, C. and <b>Roach, L. A.</b>. WIFF1. 0: A hybrid machine-learning-based parameterization of Wave-Induced sea-ice Floe Fracture (2022).  <i>Geoscientific Model Development</i> 15(2), 803-814 <a href="https://doi.org/10.5194/gmd-15-803-2022">https://doi.org/10.5194/gmd-15-803-2022</a></p>
 
