fix profile img

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#research" id="research-link"><span class="icon solid fa-user">Research</span></a></li>
+								<li><a href="#research" id="research-link"><span class="icon solid">Research</span></a></li>
 								<li><a href="#publications" id="publications-link"><span class="icon solid fa-th">Publications</span></a></li>
 								<!--<li><a href="#code" id="code-link"><span class="icon solid fa-th">Code & Data</span></a></li>-->
 								<li><a href="#cv" id="cv-link"><span class="icon solid fa-user">CV</span></a></li>
@@ -136,7 +136,7 @@
 								</div>
 								<div class="col-8 col-12-mobile">
 									<h1 style="text-align: left;"><b>Sulfate aerosols from passive volcanic degassing</b></h1>
-									<p style="text-align: left;">One of the most uncertain aspects of climate modeling is the abundance of sulfate aerosols during the preindustrial era. Passive (i.e. non-eruptive) volcanic degassing is a significant and uncertain source of natural sulfate. Most climate models simulate preindustrial and present-day volcanic sulfur emissions based on present-day satellite observations of sulfur dioxide and assume that non-eruptive emissions have been roughly constant since the preindustrial. We investigated this assumption by measuring sulfur isotopes in a Greenland ice core. By comparing our  measurements to a global chemical transport model, we found that passive volcanic degassing contributed more to preindustrial Arctic sulfate aerosol than models predict. This result has important implications for Arctic radiative forcing.</p>
+									<p style="text-align: left;">Passive (i.e. non-eruptive) volcanic degassing is a significant and uncertain source of natural sulfate. We compare ice core volcanic sulfate concentrations to a global chemical transport model, we found that passive volcanic degassing contributed more to preindustrial Arctic sulfate aerosol than models predict. This result has important implications for Arctic radiative forcing.</p>
 									<p style="text-align: left;">Related publications: Jongebloed, et al. (2022), Underestimated passive volcanic sulfur degassing implies overestimated anthropogenic aerosol radiative forcing, <em> Geophysical Research Letters (in revision)</em></p>
 										</ul>
 								</div>
@@ -147,7 +147,7 @@
 							<div class="row">
 								<div class="col-8 col-12-mobile">
 									<h1 style="text-align: left;"><b>Marine phytoplankton sulfur emissions and chemistry</b></h1>
-									<p style="text-align: left;">Marine phytoplankton are primary producers in ocean ecosystems and influence climate through emissions of a sulfur compound called dimethyl sulfide (DMS) to the atmosphere. After emission, DMS is converted to two other sulfur compounds: methanesulfonic acid (MSA) and sulfate. MSA can be measured in ice cores and is used to study past DMS emissions from phytoplankton. However, human-caused changes to atmospheric chemistry affect how much DMS is converted to MSA vs. sulfate; thus, both compounds must be considered when studying past phytoplankton DMS emissions. In this work, we use sulfur isotopes to determine how much ice core sulfate comes from each source (DMS, volcanoes, human activities), allowing us to measure how much sulfate comes from phytoplankton and compare it to MSA. In general, we find that trends in DMS-derived sulfate do not align with trends in MSA, indicating that atmospheric chemistry must be considered when interpreting ice core records of MSA.</p>
+									<p style="text-align: left;">Marine phytoplankton are primary producers in ocean ecosystems and influence climate through emissions of a sulfur compound called dimethyl sulfide (DMS) to the atmosphere. We use sulfur isotopes to quantify how much sulfate comes from phytoplankton and compare it to methanesulfonic acid, a commonly used proxy for DMS emissions, and find that trends in DMS-derived sulfate do not align with trends in methanesulfonic acid.</p>
 									<p style="text-align: left;">Related publications: Jongebloed et al. (2023), Industrial-era decline in Arctic methanesulfonic acid is offset by increased biogenic sulfate aerosol <em>in prep.</em>
 
 								</div>
@@ -174,7 +174,7 @@
 								</div>
 								<div class="col-8 col-12-mobile">
 									<h1 style="text-align: left;"><b>Anthropogenic and natural sulfate over industrial era</b></h1>
-									<p style="text-align: left;">Over the industrial era (1850 to present day), anthropogenic activities have increased the abundance of sulfate aerosols to the atmosphere. These anthropogenic sulfate aerosols partially offset the warming caused by human greenhouse gases. However, the cooling caused by anthropogenic sulfate is difficult to estimate because the abundance of sulfate from natural sulfate (e.g. volcanoes, marine phytoplankton, and sea salt) is unknown. In this study, we use a Greenland ice core to investigate how much sulfate comes from anthropogenic activities versus natural sources over the industrial era</p>
+									<p style="text-align: left;">Over the industrial era (1850 to present day), anthropogenic activities have increased the abundance of sulfate aerosols to the atmosphere, which have partially offset the warming caused by human greenhouse gases. However, the cooling caused by anthropogenic sulfate is difficult to estimate because the abundance of sulfate from natural sources is unknown. In this study, we use a Greenland ice core to investigate how much sulfate comes from anthropogenic activities versus natural sources over the industrial era</p>
 									<p style="text-align: left;">Related publications: Jongebloed et al. (in prep), Anthropogenic and natural sulfate in a Greenland ice core over the industrial era.</p>
 								</div>
 							</div>
@@ -229,12 +229,12 @@
 
 <ul style="text-align: left;">
   <li><i class="fas fa-briefcase"></i>  2019-present   Graduate Student, Atmospheric Sciences, University of Washington, US</li>
-  <li><i class="fas fa-graduation-cap"></i> 2018-2019      Consultant, ICF Consulting, inc., Washington, DC</li>
-  <li><i class="fas fa-graduation-cap"></i> 2014-2018      Bachelor of Arts in Chemistry and Earth Sciences, Dartmouth College, NH</li>
+  <li><i class="fas fa-graduation-cap"></i> 2018-2019         Consultant, ICF Consulting, inc., Washington, DC</li>
+  <li><i class="fas fa-graduation-cap"></i> 2014-2018         Bachelor of Arts in Chemistry and Earth Sciences, Dartmouth College, NH</li>
 </ul>
 
 
-<p><a href="https://github.com/ujongebloed/ujongebloed.github.io/files/Jongebloed_CV_042622.pdf" class="ai ai-cv big-icon" style="font-size: 3em;"><span class="label"></span></a></p>
+<p><a href="https://github.com/ujongebloed/ujongebloed.github.io/files/Jongebloed_CV_042622.pdf" class="font-size: 1.25em;" style="font-size: 3em;"><span class="label"></span></a></p>
 
 
 
@@ -251,8 +251,8 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Feel free to reach out! </p> 
-							<p><a href="mailto:ujongebl@uw.edu" class="icon solid fa-envelope"><span class="label"></span> Email</a> </p>
+							<!--<p>Feel free to reach out! </p>-->
+							<p><a href="mailto:ujongebl@uw.edu" class="icon solid fa-envelope"><span class="label"></span> ujongebl@uw.edu</a> </p>
 
 							
 
