--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#research" id="research-link"><span class="icon solid">Research</span></a></li>
+								<li><a href="#research" id="research-link"><span class="icon solid fa-th">Research</span></a></li>
 								<li><a href="#publications" id="publications-link"><span class="icon solid fa-th">Publications</span></a></li>
 								<!--<li><a href="#code" id="code-link"><span class="icon solid fa-th">Code & Data</span></a></li>-->
 								<li><a href="#cv" id="cv-link"><span class="icon solid fa-user">CV</span></a></li>
