--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                                                         <section class="col-6 col-12-narrower">
                                                                 <div class="container">
                                                                         <div id="content">
-										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD student in Atmospheric Sciences at the University of Washington working with <a href="https://atmos.uw.edu/blog/beckya/becky-alexander/">Becky Alexander</a>. Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>
+								<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD student in Atmospheric Sciences at the University of Washington working with <a href="https://atmos.uw.edu/blog/beckya/becky-alexander/">Becky Alexander</a>. Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>
 							
-										<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand Arctic sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD Research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities</p>
+							<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand Arctic sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD Research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities</p>
 	                                                                </div>
                                                                 </div>
                                                         </section>
@@ -139,7 +139,7 @@
 								<div class="col-8 col-12-mobile">
 									<h1 style="text-align: left;"><b>Sulfate aerosols from passive volcanic degassing</b></h1>
 									<p style="text-align: left;">Passive (i.e. non-eruptive) volcanic degassing is a significant and uncertain source of natural sulfate. We compare ice core volcanic sulfate concentrations to a global chemical transport model, we found that passive volcanic degassing contributed more to preindustrial Arctic sulfate aerosol than models predict. This result has important implications for Arctic radiative forcing.</p>
-									<p style="text-align: left;">Related publications: Jongebloed, et al. (2022), Underestimated passive volcanic sulfur degassing implies overestimated anthropogenic aerosol radiative forcing, <em> Geophysical Research Letters (in revision)</em></p>
+<p style="text-align: left;">Related publications: Jongebloed, et al. (2022), Underestimated passive volcanic sulfur degassing implies overestimated anthropogenic aerosol radiative forcing, <em> Geophysical Research Letters (in revision)</em></p>
 										</ul>
 								</div>
 							</div>
@@ -180,6 +180,7 @@
 									<p style="text-align: left;">Related publications: Jongebloed et al. (in prep), Anthropogenic and natural sulfate in a Greenland ice core over the industrial era.</p>
 								</div>
 							</div>
+							<br></br>
 
 
 
@@ -276,7 +277,7 @@
 </ul>
 
 
-<p><a href="https://github.com/ujongebloed/ujongebloed.github.io/files/Jongebloed_CV_042622.pdf" class="ai ai-cv big-icon" style="font-size: 3em;"><span class="label"></span></a></p>
+<p><a href="https://drive.google.com/file/d/1yAwSIHTwCdxbf2ICUAh_WkNpPXaFc1WZ/view?usp=sharing" class="ai ai-cv big-icon" style="font-size: 3em;"><span class="label"></span></a></p>
 
 
 
