--- a/index.html
+++ b/index.html
@@ -303,14 +303,14 @@
 			</div>
 
 		<!-- Footer -->
-			<div id="footer">
+		<!--	<div id="footer">
 
 				<!-- Copyright -->
 					<ul class="copyright">
 						<li>&copy; Ursula Jongebloed. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
-			</div>
+		</div>-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
