--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 								</section>
 									</div>
 					</section>
-
+ 
 
 				<!-- CV -->
 					<section id="cv" class="two">
@@ -277,8 +277,8 @@
   <li><i class="fas fa-graduation-cap"></i> 2014-2018 Bachelor of Arts in Chemistry and Earth Sciences, Dartmouth College, NH</li>
 </ul>
 
-
-<p><a href="https://drive.google.com/file/d/1yAwSIHTwCdxbf2ICUAh_WkNpPXaFc1WZ/view?usp=sharing" class="ai ai-cv big-icon" style="font-size: 3em;"><span class="label"></span></a></p>
+<p style="text-align: center;">Download CV <a href="https://drive.google.com/file/d/1yAwSIHTwCdxbf2ICUAh_WkNpPXaFc1WZ/view?usp=sharing">here</a></p>
+<!--<p><a href="https://drive.google.com/file/d/1yAwSIHTwCdxbf2ICUAh_WkNpPXaFc1WZ/view?usp=sharing" class="ai ai-cv big-icon" style="font-size: 3em;"><span class="label"></span></a></p>-->
 
 
 
