--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
   <li><i class="fas fa-graduation-cap"></i> 2014-2018 Bachelor of Arts in Chemistry and Earth Sciences, Dartmouth College, NH</li>
 </ul>
 
-<p style="text-align: center;">Download CV <a href="https://drive.google.com/file/d/1yAwSIHTwCdxbf2ICUAh_WkNpPXaFc1WZ/view?usp=sharing">here</a></p>
+<p style="text-align: center;">Download CV <a href="https://drive.google.com/file/d/1yAwSIHTwCdxbf2ICUAh_WkNpPXaFc1WZ/view?usp=sharing">here</a>.</p>
 <!--<p><a href="https://drive.google.com/file/d/1yAwSIHTwCdxbf2ICUAh_WkNpPXaFc1WZ/view?usp=sharing" class="ai ai-cv big-icon" style="font-size: 3em;"><span class="label"></span></a></p>-->
 
 
@@ -292,7 +292,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Feel free to reach out! </p> 
+							<!--	<p>Feel free to reach out! </p> -->
 							<p><a href="mailto:ujongebl@uw.edu" class="icon solid fa-envelope"><span class="label"></span> ujongebl@uw.edu</a> </p>
 
 							
