--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD student in Atmospheric Sciences at the University of Washington working with <a href="https://atmos.uw.edu/blog/beckya/becky-alexander/">Becky Alexander</a>.</p>
 								<!--Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>-->
 							
-							<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand Arctic sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD Research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities</p>
+							<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand Arctic sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD Research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities.</p>
 	                                                                </div>
                                                                 </div>
                                                         </section>
