--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 										<article class="item">
 										<a href="#" class="image fit"><img src="images/fairbanks_plume.jpg" alt="" /></a>
 										<header>
-										<h3>Anthropogenic sulfur dioxide emissions and ice core sulfate (picture by Yuk Chun Chan)</h3>
+										<h3>Anthropogenic sulfur dioxide emissions from a coal-fired power plant in Fairbanks, AK (picture by Yuk Chun Chan)</h3>
 										</header>
 									</article>
 								</div>
@@ -194,9 +194,9 @@
 							</header>
 
                                                         <p>Also see Google Scholar <a href="https://scholar.google.com/citations?user=flgAtJkAAAAJ&hl=en&oi=ao" class="ai ai-google-scholar ai-1x" style="font-size: 1.5em;"><span class="label"></span></a></p>
-							<p style="text-align: left;"><b>[4]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Larrick, C. G., Wood, R., Fischer, T. P., Carn, S. A., Salimi, S., Edouard, S. R., Zhai, S., Geng, L., Alexander, B. (2022) Underestimated passive volcanic sulfur degassing implied overestimated aerosol forcing. <em>Geophysical Research Letters (In Review).</em> </p>
+							<p style="text-align: left;"><b>[4]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Larrick, C. G., Wood, R., Fischer, T. P., Carn, S. A., Salimi, S., Edouard, S. R., Zhai, S., Geng, L., Alexander, B. (2022) Underestimated passive volcanic sulfur degassing implied overestimated aerosol forcing. <em>accepted to Geophysical Research Letters.</em> </p>
 
-							<p style="text-align: left;"><b>[3]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Hattori, S., Larrick, C. G., Salimi, S., Edouard, S. R., Geng, L., and Alexander, B. (<em>in prep</em>) Greenland ice core anthropogenic and natural sulfate over the industrial era.</p>
+							<p style="text-align: left;"><b>[3]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Hattori, S., Larrick, C. G., Salimi, S., Edouard, S. R., Geng, L., and Alexander, B. Greenland ice core anthropogenic and natural sulfate over the industrial era, (<em>in prep</em>).</p>
 
 							<p style="text-align: left;"><b>[2]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Larrick, C. G., Porter, W. C., Tashmim, L., Salimi, S., Edouard, S. R., Geng, L., and Alexander, B. Industrial-era decline in Arctic methanesulfonic acid is offset by increased biogenic sulfate aerosol, (<em>in prep</em>).</p> 
 
