--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<p>PhD student in Atmospheric Sciences</p>
 							<p>University of Washington</p>
 							<!--<p>New York City</p>-->
-							<span class="image avatar48"><img src="images/Ursula_headshot_Confer-530_sq.png" alt="" /></span>
+							<span class="image avatar48"><img src="images/Ursula_headshot_Confer-22_sq.png" alt="" /></span>
 						</div>
 
 					<!-- Nav -->
@@ -95,7 +95,7 @@
 										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD student in Atmospheric Sciences at the University of Washington.</p>
 								<!--Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>-->
 							
-							<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand Arctic sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD research can be broadly divided into three topics by source of Arctic sulfate aerosols: volcanoes, marine phytoplankton, and human activities.</p>
+							<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand Arctic sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD research can be broadly divided into three topics by source of sulfate aerosols: volcanoes, marine phytoplankton, and human activities.</p>
 	                                                                </div>
                                                                 </div>
                                                         </section>
@@ -197,6 +197,12 @@
 
                                                         <p>Also see Google Scholar <a href="https://scholar.google.com/citations?user=flgAtJkAAAAJ&hl=en&oi=ao" class="ai ai-google-scholar ai-1x" style="font-size: 1.5em;"><span class="label"></span></a></p>
 
+							<p style="text-align: left;"><b>[8]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Quantifying Antarctic sulfur sources using hte spatial pattern of sulfur isotopes. </p>
+
+							<p style="text-align: left;"><b>[7]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Modeling changes to DMS oxidation chemistry over the industrial era.</p>
+
+							<p style="text-align: left;"><b>[6]</b>  Chalif, J., <b>Jongebloed, U. A.</b>, et al. (<em>in revision</em>) Pollution drives enigmatic decline in subarctic biogenic sulfur.</p>
+
 							<p style="text-align: left;"><b>[5]</b>  Moon, A., <b>Jongebloed, U. A.</b>, et al. Sulfur and Oxygen Isotopes Show Primary Sulfate is the Dominant Source of Particulate Sulfate During Winter in Fairbanks, AK, <em>ACS ES&T Air</em>. <a href="https://doi.org/10.1021/acsestair.3c00023">https://doi.org/10.1021/acsestair.3c00023</a> </p>
 					
 							<p style="text-align: left;"><b>[4]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Larrick, C. G., Porter, W. C., Tashmim, L., Salimi, S., Edouard, S. R., Geng, L., and Alexander, B. Industrial-era decline in Arctic methanesulfonic acid is offset by increased biogenic sulfate aerosol, <em>Proceedings of the National Academy of Sciences, 120</em>(47). <a href="https://doi.org/10.1073/pnas.2307587120">https://doi.org/10.1073/pnas.2307587120</a> </p> 
@@ -288,7 +294,7 @@
   <li><i class="fas fa-graduation-cap"></i> 2014-2018 Bachelor of Arts in Chemistry and Earth Sciences, Dartmouth College, NH</li>
 </ul>
 
-<p style="text-align: center;">Download CV <a href="https://drive.google.com/file/d/1n7CrUkTMzyR5Pctl576KrcOCF1TaiQVK/view?usp=sharing">here</a>.</p>
+<p style="text-align: center;">Download CV <a href="https://drive.google.com/file/d/10ByCv_dBKr-4ROLYKCC1rr4gblucqYHG/view?usp=sharing">here</a>.</p>
 <!--<p><a href="https://drive.google.com/file/d/1yAwSIHTwCdxbf2ICUAh_WkNpPXaFc1WZ/view?usp=sharing" class="ai ai-cv big-icon" style="font-size: 3em;"><span class="label"></span></a></p>-->
 
 
