--- a/index.html
+++ b/index.html
@@ -197,13 +197,16 @@
 
                                                         <p>Also see Google Scholar <a href="https://scholar.google.com/citations?user=flgAtJkAAAAJ&hl=en&oi=ao" class="ai ai-google-scholar ai-1x" style="font-size: 1.5em;"><span class="label"></span></a></p>
 
-							<p style="text-align: left;"><b>[8]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Quantifying Antarctic sulfur sources using hte spatial pattern of sulfur isotopes. </p>
+							<p style="text-align: left;"><b>[9]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Quantifying Antarctic sulfur sources using hte spatial pattern of sulfur isotopes. </p>
 
-							<p style="text-align: left;"><b>[7]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Modeling changes to DMS oxidation chemistry over the industrial era.</p>
+							<p style="text-align: left;"><b>[8]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Modeling changes to DMS oxidation chemistry over the industrial era.</p>
 
-							<p style="text-align: left;"><b>[6]</b>  Chalif, J., <b>Jongebloed, U. A.</b>, et al. (<em>in revision</em>) Pollution drives enigmatic decline in subarctic biogenic sulfur.</p>
+							<p style="text-align: left;"><b>[7]</b>  Chalif, J., <b>Jongebloed, U. A.</b>, et al. (<em>in revision</em>) Pollution drives enigmatic decline in subarctic biogenic sulfur.</p>
 
-							<p style="text-align: left;"><b>[5]</b>  Moon, A., <b>Jongebloed, U. A.</b>, et al. Sulfur and Oxygen Isotopes Show Primary Sulfate is the Dominant Source of Particulate Sulfate During Winter in Fairbanks, AK, <em>ACS ES&T Air</em>. <a href="https://doi.org/10.1021/acsestair.3c00023">https://doi.org/10.1021/acsestair.3c00023</a> </p>
+							<p style="text-align: left;"><b>[6]</b>  Chan, J., Parasurama, S., Atlas, R., <b>Jongebloed, U. A.</b>, Alexander, B., Langenhan, J. M., Thornton, J. A., Riffell, J. A. (2024). Olfaction in the Anthropocene: NO3 negatively affects floral scent and nocturnal pollination. <em>Science</em>, 383(6683), 607-611. <a href="https://doi.org/10.1126/science.adi0858">https://doi.org/10.1126/science.adi0858</a> </p>
+					
+
+							<p style="text-align: left;"><b>[5]</b>  Moon, A., <b>Jongebloed, U. A.</b>, Dingilian, K. K., Schauer, A. J., Chan, Y.-C., Cesler-Maloney, M., et al. Sulfur and Oxygen Isotopes Show Primary Sulfate is the Dominant Source of Particulate Sulfate During Winter in Fairbanks, AK, <em>ACS ES&T Air</em>. <a href="https://doi.org/10.1021/acsestair.3c00023">https://doi.org/10.1021/acsestair.3c00023</a> </p>
 					
 							<p style="text-align: left;"><b>[4]</b>  <b>Jongebloed, U. A.</b>, Schauer, A. J., Cole-Dai, J., Larrick, C. G., Porter, W. C., Tashmim, L., Salimi, S., Edouard, S. R., Geng, L., and Alexander, B. Industrial-era decline in Arctic methanesulfonic acid is offset by increased biogenic sulfate aerosol, <em>Proceedings of the National Academy of Sciences, 120</em>(47). <a href="https://doi.org/10.1073/pnas.2307587120">https://doi.org/10.1073/pnas.2307587120</a> </p> 
 	
@@ -223,9 +226,9 @@
 								<h2>Presentations</h2>
 							</header>
 
-							<p style="text-align: left;"><b>[8]</b> <b>Jongebloed, U. A.</b>, et al. (2023) Model-ice core comparison of changes to DMS oxidation chemistry over the industrial era, American Geophysical Fall Meeting, San Francisco, U.S. (poster)</p>
+							<p style="text-align: left;"><b>[10]</b> <b>Jongebloed, U. A.</b>, et al. (2023) Model-ice core comparison of changes to DMS oxidation chemistry over the industrial era, American Geophysical Fall Meeting, San Francisco, U.S. (poster)</p>
 
-							<p style="text-align: left;"><b>[8]</b> <b>Jongebloed, U. A.</b>, et al. (2023) Industrial-era decline in Arctic methanesulfonic acid is offset by increased biogenic sulfate aerosol, U.S. Ice Core Open Science Meeting, Seattle, U.S. (talk)</p>
+							<p style="text-align: left;"><b>[9]</b> <b>Jongebloed, U. A.</b>, et al. (2023) Industrial-era decline in Arctic methanesulfonic acid is offset by increased biogenic sulfate aerosol, U.S. Ice Core Open Science Meeting, Seattle, U.S. (talk)</p>
 
 							<p style="text-align: left;"><b>[8]</b> <b>Jongebloed, U. A.</b>, et al. (2022) Industrial-era decline in Arctic methanesulfonic acid is offset by increased biogenic sulfate aerosol, American Geophysical Union Fall Meeting, Chicago, U.S. (poster)</p>
 
