--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                                                         <p>Also see Google Scholar <a href="https://scholar.google.com/citations?user=flgAtJkAAAAJ&hl=en&oi=ao" class="ai ai-google-scholar ai-1x" style="font-size: 1.5em;"><span class="label"></span></a></p>
 
-							<p style="text-align: left;"><b>[9]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Quantifying Antarctic sulfur sources using hte spatial pattern of sulfur isotopes. </p>
+							<p style="text-align: left;"><b>[9]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Quantifying Antarctic sulfur sources using the spatial pattern of sulfur isotopes. </p>
 
 							<p style="text-align: left;"><b>[8]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Modeling changes to DMS oxidation chemistry over the industrial era.</p>
 
