--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                                         <section class="col-6 col-12-narrower">
                                                                 <div class="container">
                                                                         <div id="content">
-										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD student in Atmospheric Sciences at the University of Washington.</p>
+										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I'm a PhD student in Atmospheric Sciences at the University of Washington with Becky Alexander.</p>
 								<!--Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>-->
 							
 							<p style="text-align: left;"> I use ice cores and atmospheric chemistry modeling to understand sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD research can be broadly divided into three topics by source of sulfate aerosols: volcanoes, marine phytoplankton, and human activities.</p>
