--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
 							<p style="text-align: left;"><b>[11]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in prep</em>) Quantifying Antarctic and Southern Ocean sulfate sources using the spatial pattern of sulfur isotopes.<em> In prep for GRL</em>. </p>
 
-							<p style="text-align: left;"><b>[10]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in review</em>) Dimethyl sulfide chemistry over the industrial era: comparison key oxidation  mechanisms and long-term observations. <em>In review at ACP</em><a href="https://doi.org/10.5194/egusphere-2024-3026">https://doi.org/10.5194/egusphere-2024-3026</a></p>
+							<p style="text-align: left;"><b>[10]</b> <b>Jongebloed, U. A.</b>, et al. (<em>in review</em>) Dimethyl sulfide chemistry over the industrial era: comparison key oxidation  mechanisms and long-term observations. <em>In review at ACP. </em><a href="https://doi.org/10.5194/egusphere-2024-3026">https://doi.org/10.5194/egusphere-2024-3026</a></p>
 
 							<p style="text-align: left;"><b>[9]</b> Kang, L., Marchand, R., Ma, P.-L., Huang, M., Wood, R., <b>Jongebloed, U. A.</b>, and Alexander, B. Understanding biases in E3SMv2 simulated cloud droplet number and aerosol concentrations over the Southern Ocean. <em>Submitted to J. Advances in Modeling Earth Systems</em>. <a href="https://doi.org/10.22541/essoar.172574475.50852357/v1">https://doi.org/10.22541/essoar.172574475.50852357/v1</a></p>
 
