website update on 9/9/25

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<!-- Logo -->
 						<div id="logo">
 						<h1 id="title">Ursula Jongebloed</h1>
-							<p>PhD student in Atmospheric Sciences</p>
-							<p>University of Washington</p>
+							<p>School of Science Dean's Postdoctoral Fellow</p>
+							<p>MIT</p>
 							<!--<p>New York City</p>-->
 							<span class="image avatar48"><img src="images/Ursula_headshot_Confer-22_sq.png" alt="" /></span>
 						</div>
@@ -95,7 +95,7 @@
 										<p style="text-align: left;">My name is Ursula Jongebloed (pronounced "youngblood") and I am an atmospheric chemist interested in aerosols and their impacts on climate. My work synthesizes knowledge across multiple earth science disciplines, including isotope geochemistry, atmospheric chemistry, paleoclimatology, volcanology, and climate science to understand how aerosols influence and are influenced by the earth system.</p>
 								<!--Before coming to UW, I studied chemistry and Earth sciences at Dartmouth College and worked as a federal contractor for the U.S. Environmental Protection Agency.</p>-->
 							
-							<p style="text-align: left;"> I am currently an MIT School of Science Dean's Postdoctoral Fellow advised by Arlene Fiore (MIT EAPS) and Jesse Kroll (MIT CEE). During my PhD advised by Becky Alexander, I used ice cores and atmospheric chemistry modeling to understand sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD research can be broadly divided into three topics by source of sulfate aerosols: volcanoes, marine phytoplankton, and human activities. </p>
+							<p style="text-align: left;"> I am currently an MIT School of Science Dean's Postdoctoral Fellow hosted by Arlene Fiore (MIT EAPS) and Jesse Kroll (MIT CEE). During my PhD advised by Becky Alexander, I used ice cores and atmospheric chemistry modeling to understand sulfate aerosol sources and chemistry during the preindustrial and industrial eras. My PhD research can be broadly divided into three topics by source of sulfate aerosols: volcanoes, marine phytoplankton, and human activities. </p>
 	                                                                </div>
                                                                 </div>
                                                         </section>
