--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<!-- Logo -->
 						<div id="logo">
 						<h1 id="title">Ursula Jongebloed</h1>
-							<p>School of Science Dean's Postdoctoral Fellow</p>
-							<p>MIT</p>
+							<p>Postdoctoral Fellow</p>
+							<p>MIT School of Science</p>
 							<!--<p>New York City</p>-->
 							<span class="image avatar48"><img src="images/Ursula_headshot_Confer-22_sq.png" alt="" /></span>
 						</div>
