website update from svante 10/2/2025

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                                                                 <div class="container">
                                                                         <div id="content">
                 								<article class="item">
-										<a href="#" class="image fit"><img src="images/Ursula_headshot_Confer-22.png" alt="" /></a>
-									</article>
+										<a href="#" class="image fit"><img src="images/Ursula_Parsons_Vertical.jpg" alt="" /></a>
+										</article>
                                                                         </div>
                                                                 </div>
                                                         </section>
